--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,22 +1,64 @@
 .navbar {
-  padding: 0.5rem 0;
-  font-weight: bold;
+  height: 9vh;
   font-size: 1.5rem;
 }
 
-.about {
-  /* border: 2px solid black; */
+main {
   height: 100vh;
-  width: 90%;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 1.5rem auto;
+  text-align: center;
+}
+
+.about-blocks {
+  margin: 0.5rem 0;
+  padding: 0.5rem;
+  border-radius: 6px;
+  box-shadow: 1px 1px 4px black;
+  background-color: white;
+  border: 1px solid rgb(116, 192, 255);
+}
+
+.heading {
+  width: fit-content;
   margin: auto;
-  padding: 1rem;
+  font-size: 2rem;
+  background-color: rgb(230, 244, 255);
+  padding: 0 0.5rem;
+  border-radius: 6px;
 }
 
-.about p {
-  /* border: 2px solid red; */
-  padding: 0 2rem;
+.content {
+  margin: 1rem;
 }
 
-.about ul {
-  padding: 0 4rem;
+.role {
+  text-decoration: underline;
+}
+
+.external-links {
+  color: black;
+  text-decoration: none;
+}
+.external-links:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 650px) {
+  .heading {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .about {
+    width: 90%;
+  }
+  .content {
+    margin: 1rem 0;
+  }
 }
